feat(workflows): add Workflow components and hooks - Introduced WorkflowGrid, WorkflowLeftSidebar, WorkflowThumbnail, and related components for better workflow management. - Implemented tabs for Activity, Overview, and Settings with respective functionalities. - Added hooks for managing workflows and searching through them. - Created a centralized index for easier imports of workflow components and hooks. - Defined types for better type safety and clarity in workflow-related data structures.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -76,6 +76,11 @@
     "zoomOut": "تصغير",
     "fitView": "ملاءمة العرض"
   },
+  "pageNotFound": {
+    "title": "الصفحة غير موجودة",
+    "message": "الصفحة التي تبحث عنها غير موجودة 😢",
+    "goBack": "العودة للصفحة السابقة"
+  },
   "nodes": {
     "trigger": "مشغّل",
     "condition": "شرط",
